# SynthSeg

./: pyproject.toml
src/SynthSeg/: metrics_model.py  predict.py  predict_synthseg.py
src/ext/neuron/: models.py
